2014-09-10  peavo@outlook.com  <peavo@outlook.com>

        [Curl] Compile error, CertificateInfo.h is not found.
        https://bugs.webkit.org/show_bug.cgi?id=136703

        Reviewed by Alex Christensen.

        Curl also needs to implement the CertificateInfo class.

        * platform/network/curl/CertificateInfo.h: Added.
        (WebCore::CertificateInfo::CertificateInfo):

2014-09-10  Simon Fraser  <simon.fraser@apple.com>

        Clean up some ENABLE(PICTURE_SIZES) stuff, don't change function signatures inside #ifdefs
        https://bugs.webkit.org/show_bug.cgi?id=136654

        Reviewed by Darin Adler.

        Adding parameters inside an #ifdef makes for unreadable code, so remove some
        #if ENABLE(PICTURE_SIZES) related to the preload scanner and always pass the arguments.
        Reduced the argument count on some functions by just passing a Document&. 
        
        Also fix a couple of uses of #if ENABLE_PICTURE_SIZES.

        * html/HTMLImageElement.h:
        * html/parser/HTMLDocumentParser.cpp:
        (WebCore::HTMLDocumentParser::pumpTokenizer):
        (WebCore::HTMLDocumentParser::insert):
        (WebCore::HTMLDocumentParser::append):
        (WebCore::HTMLDocumentParser::appendCurrentInputStreamToPreloadScannerAndScan):
        * html/parser/HTMLPreloadScanner.cpp:
        (WebCore::TokenPreloadScanner::scan):
        (WebCore::HTMLPreloadScanner::scan):
        * html/parser/HTMLPreloadScanner.h:
        * html/parser/HTMLSrcsetParser.cpp:
        (WebCore::pickBestImageCandidate):
        (WebCore::bestFitSourceForImageAttributes):
        * html/parser/HTMLSrcsetParser.h:

2014-09-10  Chris Fleizach  <cfleizach@apple.com>

        AX: aria-labelledby is not honoring sub-node text
        https://bugs.webkit.org/show_bug.cgi?id=136689

        Reviewed by Mario Sanchez Prada.

        Test: accessibility/aria-labelledby-with-descendants.html

        When aria-labelledby retrieves the textUnderElements it needs to consider